--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
-              <img style="filter: brightness(50%);" src="images/cover/cover-1.png" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid img-brightness" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
-                <h5>Get Started Digital Learning</h5>
-                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <h5>Get Connected With EducationBD</h5>
+                <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img style="filter: brightness(50%);" src="images/cover/cover-2.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid img-brightness" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
-                <h5>Get Started Digital Learning</h5>
-                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <h5>Get Connected With EducationBD</h5>
+                <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="3000">
-              <img style="filter: brightness(50%);" src="images/cover/cover-3.jpg" id="img-brightness" class="d-block w-100 img-fluid" alt="...">
+              <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid img-brightness" alt="...">
               <div class="carousel-caption d-block d-md-block text-white">
-                <h5>Get Started Digital Learning</h5>
-                <p>It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <h5>Get Connected With EducationBD</h5>
+                <p>We are providing the best facilities for our student. If if you are can go with us,<br>Then you are WELCOME!</p>
                 <button type="button" class="btn btn-primary px-4 fw">Get Started</button>
               </div>
             </div>
@@ -98,81 +98,81 @@
       <!-- popular class started  -->
       <section id="courses" class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
-          <div class="w-50">
+          <div class="w-50 mb-5">
             <h1 class="text-center">Discover Our Popular Courses</h1>
             <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </div>
           <div class="container d-flex justify-content-center">
             <div class="row g-3">
-              <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-1.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">We are the best coaching center for fundamental UI/UX design. You can join us.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 20$</span>
                     </div>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-2.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Javascript Basic to advanced</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">If you want to learng JavaScrip we are here to provide you perfect suggestions.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 25$</span>
                     </div>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-12 col-sm-12">
+              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-3.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Fullstack Web Development</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">There is a big market value of the full stack web-developer.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 30$</span>
                     </div>
                 </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-4.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Digital Marketing</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">We are teaching hand by hand for Digital Marketing.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 40$</span>
                     </div>
                 </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-1.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Photography Basic Rules</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">You like Photography, right? Then visit our course details.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 35$</span>
                     </div>
                 </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-6.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Motion Graphics</h5>
-                      <p class="my-2">Some quick example text to build on the card title and make up the bulk of the card.</p>
-                      <p class="fw-bolder text-primary m-0">Price : 20$</p>
+                      <p class="my-2">We have the best teachers for Motion Graphics. See everything.</p>
+                      <span class="fw-bolder text-primary m-0 after-hover">Price : 50$</span>
                     </div>
                 </div>
               </div>
@@ -194,22 +194,22 @@
           <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column align-items-center">
             <div class="my-auto">
               <h1>Ready to join?</h1>
-              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <p>If you think you are ready then click register now. Of course, we are the best company to teaching the courses.</p>
             </div>
           </div>
           <div class="col-lg-6 col-md-12 d-flex justify-content-center flex-column align-items-center">
             <div class="">
-              <button style="background-color: white; color: #289BDE" type="button" class="btn fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <button type="button" class="btn fw-bold text-primary customize-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Register Now</button>
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title text-dark" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title text-dark" id="exampleModalLabel">Registration</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <p class="text-dark">Are you sure to register?</p>
+                        <p class="text-dark">Clik yes to go to the registration page-</p>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
