mistake happening again and again

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <!-- navbar start -->
       <section>
-        <nav class="navbar fixed-top navbar-expand-lg bg-primary">
+        <nav class="fixed-top navbar navbar-expand-lg bg-primary">
           <div class="container-fluid">
             <a class="navbar-brand bg-light text-primary fw-bolder px-3 rounded" href="#">EducationBD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
       <!-- navbar end -->
 
       <!-- slider start -->
-      <section class="container mb-5 fixing-top">
+      <section class="container mb-5 position">
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
@@ -94,86 +94,98 @@
 
     <!-- main started  -->
 
-    <main>
+    <main class="main-body">
       <!-- popular class started  -->
       <section id="courses" class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div class="w-50 mb-5">
-            <h1 class="text-center">Discover Our Popular Courses</h1>
-            <p class="text-center">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <h1 class="text-center">Courses We Are Providing</h1>
+            <p class="text-center my-3">We are providing some amazing courses for you my friends. If anyone want to know about our courses please check it out.</p>
           </div>
           <div class="container d-flex justify-content-center">
-            <div class="row g-3">
-              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+            <div class="row g-5">
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-1.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Fundamental Of UI/UX Design</h5>
                       <p class="my-2">We are the best coaching center for fundamental UI/UX design. You can join us.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 20$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 20$</span>
                     </div>
                 </div>
+                </div>
               </div>
-              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-2.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Javascript Basic to advanced</h5>
                       <p class="my-2">If you want to learng JavaScrip we are here to provide you perfect suggestions.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 25$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 25$</span>
                     </div>
                 </div>
+                </div>
               </div>
-              <div class="col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-3.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Fullstack Web Development</h5>
                       <p class="my-2">There is a big market value of the full stack web-developer.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 30$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 30$</span>
                     </div>
                 </div>
+                </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-4.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Digital Marketing</h5>
                       <p class="my-2">We are teaching hand by hand for Digital Marketing.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 40$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 40$</span>
                     </div>
                 </div>
+                </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-1.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Photography Basic Rules</h5>
                       <p class="my-2">You like Photography, right? Then visit our course details.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 35$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 35$</span>
                     </div>
                 </div>
+                </div>
               </div>
-              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12 hover-effect">
-                <div class="row align-items-center">
+              <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6 col-md-12 col-sm-12">
+                <div class="border border-secondary rounded hover-effect">
+                  <div class="row align-items-center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <img src="images/course/course-6.png" alt="" class="card-img-top">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12 my-auto">
                       <h5 class="fw-bolder m-0">Motion Graphics</h5>
                       <p class="my-2">We have the best teachers for Motion Graphics. See everything.</p>
-                      <span class="fw-bolder text-primary m-0 after-hover">Price : 50$</span>
+                      <span class="fs-3 fw-bolder text-primary m-0 after-hover">Price : 50$</span>
                     </div>
+                </div>
                 </div>
               </div>
             </div>
