--- a/index.html
+++ b/index.html
@@ -328,15 +328,16 @@
       <div class="d-flex justify-content-center flex-column align-items-center p-5 fs-4 fw-light">
         <div>EducationBD</div>
         <div>
-          <p class="m-0 text-center">Office 41, Zawaya Buildin, Ghala Muscat,<br> 
-            Sultanate of Oman</p>
+          <p class="m-0 text-center">Office-51/A, Siddeswari, Ramna,<br> 
+            Dhaka, Bangladesh</p>
         </div>
         <div class="privacy-terms">
-          <a href="">Privacy & Policy</a>
-          <a href="">Terms of use</a>
+          <a href="" class="text-decoration-none text-white">Privacy & Policy</a>
+          <span>|</span>
+          <a href="" class="text-decoration-none text-white">Terms of use</a>
         </div>
         <div class="mt-5 fs-3">
-          <a href="https://www.facebook.com/grsagor.official/" class="text-decoration-none text-light mx-1"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://www.facebook.com/grsagor.official/" class="text-decoration-none text-white mx-1"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://twitter.com/SagorShoaib" class="text-decoration-none text-light mx-1"><i class="fa-brands fa-twitter"></i>
           </a><a href="https://www.linkedin.com/in/golam-rahman-sagor-937450217/" class="text-decoration-none text-light mx-1"><i class="fa-brands fa-linkedin-in"></i></a>
           <a href="https://www.tiktok.com/en/" class="text-decoration-none text-light mx-1"><i class="fa-brands fa-tiktok"></i></a>
