text center for privay and policy

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <section id="courses" class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div class="w-50 mb-5">
-            <h1 class="text-center">Courses We Are Providing</h1>
+            <h1 class="text-center">Course Details</h1>
             <p class="text-center my-3">We are providing some amazing courses for you my friends. If anyone want to know about our courses please check it out.</p>
           </div>
           <div class="container d-flex justify-content-center">
@@ -240,8 +240,8 @@
       <section class="container my-5">
         <div class="d-flex justify-content-center flex-column align-items-center">
           <div class="d-flex justify-content-center flex-column align-items-center">
-            <h1>Frequently Asked Questions</h1>
-            <p class="text-muted text-center mt-2 mb-4">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+            <h1>FAQ</h1>
+            <p class="text-muted text-center mt-2 mb-4">Here is some common question that you can question for. Let's know the answer.</p>
           </div>
           <div>
             <div class="accordion" id="accordionExample">
@@ -331,7 +331,7 @@
           <p class="m-0 text-center">Office-51/A, Siddeswari, Ramna,<br> 
             Dhaka, Bangladesh</p>
         </div>
-        <div class="privacy-terms">
+        <div class="privacy-terms text-center">
           <a href="" class="text-decoration-none text-white">Privacy & Policy</a>
           <span>|</span>
           <a href="" class="text-decoration-none text-white">Terms of use</a>
